minor text edits

--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -191,7 +191,7 @@ Beyond this, in many countries COVID-19 and vaccines against it have been politi
 
 Intuitive theories are powerful cognitive tools, for better and for worse. Coherent networks of beliefs allow people to understand, predict, and navigate the world, but they can also sustain misconceptions and lead to suboptimal---even dangerous---decisions and behaviors. Deciding to opt out of getting vaccinated against diseases like measles or COVID-19 is not only dangerous for the individual, but a serious threat to public health. We hope the studies presented here have shed light on how people might come to such decisions, why the misconceptions that support these decisions can be so hard to combat, and how to develop educational interventions that are persuasive and effective in encouraging and sustaining healthier behaviors.
 
-# Methods
+# Materials and methods
 
 ## Qualitative studies and scale development
 
@@ -235,7 +235,7 @@ We aimed to represent not only the relationships among variables in the data but
 
 Rather than specifying a priori all of the connections among the 14 beliefs included in this study, we deployed Bayesian network structure learning to search for the most likely network structure given the observed correlations between beliefs---with the constraint that this structure conform to some of our strongest high-level intuitions about what an intuitive theory should look like in this domain.
 
-In particular, we applied what we call the “generative model principle,” specifying that influence relations (edges) should flow from causes (or other generating states of affairs) to effects; instilling a core assumption in research on intuitive theories and causal explanatory reasoning [e.g. @gopnik.etal2004; @gerstenberg.etal2021; @cheng1997]. We sorted the 14 measured beliefs into four tiers based on how general or abstract each belief was, reasoning that general and abstract states of affairs should be understood to cause (or otherwise generate) more specific and concrete states of affairs, so edges should flow from the general and abstract toward the specific and concrete (e.g., if natural things are better than artificial things, this should set an expectation about whether a specific class of artificial things--vaccines--is safe). We considered *holistic balance* and *naturalism* to be the most general and abstract beliefs among those we measured; followed by theories about parenting and medicine; then specific beliefs about vaccines, diseases, and the infant immune system; and finally our outcome of interest, *vaccine intentions*---the most concrete measurement of a specific intended action.
+In particular, we applied what we call the “generative model principle,” specifying that influence relations (edges) should flow from causes (or other generating states of affairs) to effects; instilling a core assumption in research on intuitive theories and causal explanatory reasoning [e.g. @gerstenberg.etal2021; @gopnik.etal2004; @cheng1997]. We sorted the 14 measured beliefs into four tiers based on how general or abstract each belief was, reasoning that general and abstract states of affairs should be understood to cause (or otherwise generate) more specific and concrete states of affairs, so edges should flow from the general and abstract toward the specific and concrete (e.g., if natural things are better than artificial things, this should set an expectation about whether a specific class of artificial things--vaccines--is safe). We considered *holistic balance* and *naturalism* to be the most general and abstract beliefs among those we measured; followed by theories about parenting and medicine; then specific beliefs about vaccines, diseases, and the infant immune system; and finally our outcome of interest, *vaccine intentions*---the most concrete measurement of a specific intended action.
 
 We used this sorting to induce a partial ordering of these 14 beliefs, stipulating that directed edges that violated this ordering must not appear in the final network of beliefs (e.g., that there should be no edge from *vaccine intentions* to *naturalism*, although there could be an edge from *naturalism* to *vaccine intentions*). 
 
